RESOLVED FIXED 79929
Autocomplete attribute should apply to textarea's.
https://bugs.webkit.org/show_bug.cgi?id=79929
Summary Autocomplete attribute should apply to textarea's.
Mike Fenton
Reported 2012-02-29 11:34:37 PST
The blackberry styling for autocomplete should be applicable to textarea's as well as regular input fields.
Attachments
Patch (8.14 KB, patch)
2012-02-29 11:38 PST, Mike Fenton
no flags
Patch based on suggestion. (2.43 KB, patch)
2012-02-29 12:42 PST, Mike Fenton
no flags
Updated patch based on suggestion. (2.16 KB, patch)
2012-02-29 13:16 PST, Mike Fenton
webkit.review.bot: commit-queue-
Updated second patch. (2.04 KB, patch)
2012-03-01 05:27 PST, Mike Fenton
webkit.review.bot: commit-queue-
Updated patch with reviewer in Changelog. (2.04 KB, patch)
2012-03-01 05:50 PST, Mike Fenton
no flags
Mike Fenton
Comment 1 2012-02-29 11:38:24 PST
Antonio Gomes
Comment 2 2012-02-29 12:08:13 PST
Comment on attachment 129482 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=129482&action=review > Source/WebKit/blackberry/WebKitSupport/DOMSupport.cpp:183 > + return elementAttributeState(element, QualifiedName(nullAtom, "autocorrect", nullAtom)); I would do DEFINE_STATIC_LOCAL(AtomicString, autocorrect, ("autocorrect")); > Source/WebKit/blackberry/WebKitSupport/DOMSupport.cpp:191 > +AttributeState elementAttributeState(const Element* element, const QualifiedName& attributeName) 'AttributeState' reads too generic for its scoped purposes, I would think.
Mike Fenton
Comment 3 2012-02-29 12:42:15 PST
Created attachment 129489 [details] Patch based on suggestion.
Mike Fenton
Comment 4 2012-02-29 13:16:35 PST
Created attachment 129501 [details] Updated patch based on suggestion.
WebKit Review Bot
Comment 5 2012-02-29 16:34:17 PST
Comment on attachment 129482 [details] Patch Clearing flags on attachment: 129482 Committed r109284: <http://trac.webkit.org/changeset/109284>
WebKit Review Bot
Comment 6 2012-02-29 16:34:21 PST
All reviewed patches have been landed. Closing bug.
Mike Fenton
Comment 7 2012-03-01 05:27:57 PST
Created attachment 129684 [details] Updated second patch.
Mike Fenton
Comment 8 2012-03-01 05:28:19 PST
Reopening to land followup patch.
WebKit Review Bot
Comment 9 2012-03-01 05:48:26 PST
Comment on attachment 129501 [details] Updated patch based on suggestion. Rejecting attachment 129501 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 ERROR: /mnt/git/webkit-commit-queue/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output: http://queues.webkit.org/results/11779449
WebKit Review Bot
Comment 10 2012-03-01 05:49:55 PST
Comment on attachment 129684 [details] Updated second patch. Rejecting attachment 129684 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 ERROR: /mnt/git/webkit-commit-queue/Source/WebKit/blackberry/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output: http://queues.webkit.org/results/11779451
Mike Fenton
Comment 11 2012-03-01 05:50:13 PST
Created attachment 129688 [details] Updated patch with reviewer in Changelog.
WebKit Review Bot
Comment 12 2012-03-01 09:49:40 PST
The commit-queue encountered the following flaky tests while processing attachment 129688 [details]: fast/workers/storage/use-same-database-in-page-and-workers.html bug 50995 (author: dumi@chromium.org) The commit-queue is continuing to process your patch.
WebKit Review Bot
Comment 13 2012-03-01 09:51:11 PST
Comment on attachment 129688 [details] Updated patch with reviewer in Changelog. Rejecting attachment 129688 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: Source/WebKit/chromium/ChangeLog Failed to merge in the changes. Patch failed at 0001 Web Inspector: [InspectorIndexedDB] Show tooltips with IndexedDB objects meta information When you have resolved this problem run "git rebase --continue". If you would prefer to skip this patch, instead run "git rebase --skip". To restore the original branch and stop rebasing run "git rebase --abort". rebase refs/remotes/origin/master: command returned error: 1 Died at Tools/Scripts/update-webkit line 164. Full output: http://queues.webkit.org/results/11769544
WebKit Review Bot
Comment 14 2012-03-01 14:42:13 PST
Comment on attachment 129688 [details] Updated patch with reviewer in Changelog. Clearing flags on attachment: 129688 Committed r109430: <http://trac.webkit.org/changeset/109430>
WebKit Review Bot
Comment 15 2012-03-01 14:42:17 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.