Autocomplete attribute should apply to textarea's. https://bugs.webkit.org/show_bug.cgi?id=79929

Patch by Mike Fenton <mifenton@rim.com> on 2012-02-29
Reviewed by Antonio Gomes.

Allow the autocomplete attribute to bubble back to the form setting.

Expand support to include checking autocorrect, autocomplete and
name/id matching to text areas.

Reviewed internally by Nima Ghanavatian and Gen Mak.

* WebKitSupport/DOMSupport.cpp:
(BlackBerry::WebKit::DOMSupport::elementSupportsAutocorrect):
(BlackBerry::WebKit::DOMSupport::elementSupportsAutocomplete):
(BlackBerry::WebKit::DOMSupport::elementAttributeState):
* WebKitSupport/DOMSupport.h:
* WebKitSupport/InputHandler.cpp:
(BlackBerry::WebKit::inputStyle):

Canonical link: https://commits.webkit.org/97037@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@109284 268f45cc-cd09-0410-ab3c-d52691b4dbfc